# Algorithms-Implementation

./: CMakeLists.txt  main.cpp
DataStructures/header/: Array.h  DisjointSets.h  Heap.h  Queue.h
DataStructures/header/Graph/: Graph.h  Node.h
DataStructures/src/: Array.tpp  DisjointSets.cpp  Heap.tpp  Queue.tpp
DataStructures/src/Graph/: Graph.cpp  Node.cpp
Problems/: Add_All.cpp  Friends.cpp  Problems.h  Spreading_The_News.cpp
